--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
   "repository": "https://github.com/vehikl/eslint-config-vehikl.git",
   "author": "Vehikl.com",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "test": "mocha --opts tests/mocha.opts"
+  },
+  "peerDependencies": {
+    "eslint": ">= 3"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
+  }
 }
